# hexspin

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/actions/: test-action.yml
.github/actions/build-linux/: action.yml
.github/actions/build-windows-msvc/: action.yml
.github/actions/test-action/: action.yml
.github/workflows/: release.yml  test.yml
assets/: color.frag
include/glad/: glad.h
include/hexspin/: animation.h  common.h  event.h  hex_grid.h  hex_grid_renderer.h  shader.h
src/: animation.c  event.c  glad.c  hex_grid.c  hex_grid_renderer.c  main.c  shader.c
